allnamespace/0-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: apigateway
---
apiVersion: v1
kind: Namespace
metadata:
  name: opsbot
